traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:16: error: ')' expected but integer literal found.
    cpt+=1
         ^