traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int=0
  var x:Int=0
  var y:Int=0

  ecritMessage(cpt)
  droite()
  while (positionTest()==false){
    x=getX()
  	y=getY()
    if(cpt%2==0 && estFaceMur()==true){
      setPos(x,y+1)
			parcours1()
    }else if(estFaceMur()==true && cpt%2==1{
      parcours2()
    }
		cpt+=1
    ecritMessage(cpt)
    positionTest()   
    
  }
  
  
}



def parcours1(){
  var x:Int=0
  var y:Int=0
  x=getX()
  y=getY()
  setPos(x-1,y)   
}
def parcours2(){
  var x:Int=0
  var y:Int=0
  x=getX()
  y=getY()
  setPos(x+1,y)  
}









def positionTest():Boolean={
  if(getMondeHauteur()-1==getY() && getMondeLargeur()-1==getX()){
    return true
  }else {
    return false
  }
  
}